// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInfosGenerales /> should render 1`] = `
.c2 {
  padding: 0;
  font-size: 1.15rem;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 1.25rem;
}

.c0 {
  font-size: 1.25rem;
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
}

<div>
  <p
    class="c0"
  >
    Quel est votre type de contrat ?
  </p>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <input
        name="contractType"
        type="radio"
        value="CDD"
      />
      <span>
        Contrat à durée déterminée (CDD)
      </span>
    </label>
    <label
      class="c2"
    >
      <input
        name="contractType"
        type="radio"
        value="CTT"
      />
      <span>
        Contrat de travail temporaire (Contrat d’intérim)
      </span>
    </label>
  </div>
</div>
`;

exports[`<StepInfosGenerales /> should render with CDD 1`] = `
.c2 {
  padding: 0;
  font-size: 1.15rem;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 1.25rem;
}

.c0 {
  font-size: 1.25rem;
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
}

.c4 {
  margin-top: 0.625rem;
  margin-right: 1.25rem;
  -webkit-flex: 1 1 70%;
  -ms-flex: 1 1 70%;
  flex: 1 1 70%;
  min-width: 400px;
  max-width: 100%;
}

.c3 {
  margin: 1.25rem 0;
}

<div>
  <p
    class="c0"
  >
    Quel est votre type de contrat ?
  </p>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <input
        checked=""
        name="contractType"
        type="radio"
        value="CDD"
      />
      <span>
        Contrat à durée déterminée (CDD)
      </span>
    </label>
    <label
      class="c2"
    >
      <input
        name="contractType"
        type="radio"
        value="CTT"
      />
      <span>
        Contrat de travail temporaire (Contrat d’intérim)
      </span>
    </label>
  </div>
  <div
    class="c3"
  >
    <label
      class="c2"
      for="input-criteria.cddType"
    >
      Quelle est le type de votre cdd ?
    </label>
    <select
      class="c4"
      id="input-criteria.cddType"
      name="criteria.cddType"
    >
      <option
        disabled=""
        value=""
      >
        ...
      </option>
      <option
        value="CDD saisonnier"
      >
        CDD saisonnier
      </option>
      <option
        value="CDD d'usage"
      >
        CDD d'usage
      </option>
      <option
        value="CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires"
      >
        CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires
      </option>
      <option
        value="CCD dans le cadre d’un congé de mobilité"
      >
        CCD dans le cadre d’un congé de mobilité
      </option>
      <option
        value="Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)"
      >
        Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)
      </option>
      <option
        value="Contrat de professionnalisation ou Contrat d’apprentissage"
      >
        Contrat de professionnalisation ou Contrat d’apprentissage
      </option>
      <option
        value="Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié"
      >
        Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié
      </option>
      <option
        value="Autres"
      >
        Autres
      </option>
    </select>
  </div>
</div>
`;

exports[`<StepInfosGenerales /> should render with CTT 1`] = `
.c2 {
  padding: 0;
  font-size: 1.15rem;
  margin-right: 2em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 1.25rem;
}

.c0 {
  font-size: 1.25rem;
  display: block;
  margin-top: 1.25rem;
  margin-bottom: 0.625rem;
}

<div>
  <p
    class="c0"
  >
    Quel est votre type de contrat ?
  </p>
  <div
    class="c1"
  >
    <label
      class="c2"
    >
      <input
        name="contractType"
        type="radio"
        value="CDD"
      />
      <span>
        Contrat à durée déterminée (CDD)
      </span>
    </label>
    <label
      class="c2"
    >
      <input
        checked=""
        name="contractType"
        type="radio"
        value="CTT"
      />
      <span>
        Contrat de travail temporaire (Contrat d’intérim)
      </span>
    </label>
  </div>
  <p
    class="c0"
  >
    Avez vous un contrat de mission-formation ?
  </p>
  <div
    class="c1"
    data-testid="cttFormation"
  >
    <label
      class="c2"
    >
      <input
        name="cttFormation"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c2"
    >
      <input
        name="cttFormation"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c0"
  >
    Votre contrat d'intérim a-t-il été rompu avant la fin prévue pour une des raisons suivantes : votre propre initiative, votre faute grave ou en cas de force majeure ?
  </p>
  <div
    class="c1"
    data-testid="ruptureContratFauteGrave"
  >
    <label
      class="c2"
    >
      <input
        name="ruptureContratFauteGrave"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c2"
    >
      <input
        name="ruptureContratFauteGrave"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c0"
  >
    À la fin de votre contrat d'intérim, avez-vous été immédiatement embauché en CDI au sein de l'entreprise dans laquelle vous effectuiez votre mission ?
  </p>
  <div
    class="c1"
    data-testid="propositionCDIFinContrat"
  >
    <label
      class="c2"
    >
      <input
        name="propositionCDIFinContrat"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c2"
    >
      <input
        name="propositionCDIFinContrat"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
  <p
    class="c0"
  >
    Avez-vous refusé la mise en œuvre de la souplesse prévue dans votre contrat d’intérim ?
  </p>
  <div
    class="c1"
    data-testid="refusSouplesse"
  >
    <label
      class="c2"
    >
      <input
        name="refusSouplesse"
        type="radio"
        value="true"
      />
      <span>
        Oui
      </span>
    </label>
    <label
      class="c2"
    >
      <input
        name="refusSouplesse"
        type="radio"
        value="false"
      />
      <span>
        Non
      </span>
    </label>
  </div>
</div>
`;
